...
            FloatingActionButton(
                onClick = {
                    viewModel.onEvent(AddEditNoteEvent.SaveNote)
                },
                containerColor = MaterialTheme.colorScheme.primary,
            ) {
                Icon(imageVector = Icons.Default.Save, contentDescription = "Save")
            }
        },
    ) {
        Column(
            modifier = Modifier
                .fillMaxSize()
...
